<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_approve_recipes"
        android:title="@string/title_approve"
        android:icon="@android:drawable/ic_menu_agenda" />

    <item
        android:id="@+id/nav_post_recipe"
        android:title="@string/title_post"
        android:icon="@android:drawable/ic_menu_edit" />

    <item
        android:id="@+id/nav_recipe_list"
        android:title="@string/title_list"
        android:icon="@android:drawable/ic_menu_sort_by_size" />
    <item
        android:id="@+id/nav_manage_users"
        android:title="@string/title_users"
        android:icon="@android:drawable/ic_menu_manage" />
    <item
        android:id="@+id/nav_account"
        android:title="@string/title_account"
        android:icon="@android:drawable/ic_menu_myplaces" />
</menu>
